--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">StoryTeller</string>
+
+    <!-- Settings -->
+    <string name="settings_title">Settings</string>
+    <string name="settings_clearDB">Clear Database</string>
+    <string name="settings_addTokens">Add Tokens</string>
+    <string name="settings_exit">Exit</string>
 </resources>
