- Refactored the names of multiple files. - Added visual for StoryChooser Activity (incomplete) - Added StoryCreatorActivity + related fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,12 @@
         <item>Horror</item>
     </string-array>
 
+    <!-- StoryCreator -->
+    <string name="story_creator_header_title">Once upon a time&#8230;</string>
+    <string name="story_creator_title_hint">Title</string>
+    <string name="story_creator_character_hint">Main character\'s name</string>
+    <string name="story_creator_next_btn">Next</string>
+
     <!--  Settings  -->
     <string name="settings_title">Settings</string>
     <string name="settings_clearDB">Clear Database</string>
