--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="story_creator_theme_btn">Pick a THEME</string>
     <string name="story_creator_next_btn">Next</string>
 
+    <!-- StoryEditor -->
+    <string name="story_editor_new_story_sentence_hint">And so it begins...</string>
+    <string name="story_editor_continue_sentence_hint">Wr</string>
+
     <!--  Settings  -->
     <string name="settings_title">Settings</string>
     <string name="settings_clearDB">Clear Database</string>
