Added loading screen for StoryChooser and StoryEditor.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <!-- StoryEditor -->
     <string name="story_editor_new_story_sentence_hint">And so it begins...</string>
     <string name="story_editor_continue_sentence_hint">Wr</string>
+    <string name="story_editor_submit_btn">Submit</string>
 
     <!--  Settings  -->
     <string name="settings_title">Settings</string>
