--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="story_creator_next_btn">Next</string>
 
     <!-- StoryEditor -->
-    <string name="story_editor_new_story_sentence_hint">And so it begins...</string>
+    <string name="story_editor_new_story_sentence_hint">And so it begins&#8230;</string>
     <string name="story_editor_continue_sentence_hint">Wr</string>
     <string name="story_editor_submit_btn">Submit</string>
 
