App now closes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">StoryTeller</string>
 
+    <!-- Authentication -->
+    <string name="authentication_connecting">Connecting</string>
+
+    <!-- Loading Profile -->
+    <string name="launching_app">Welcome</string>
+
     <!--  SignIn  -->
     <string name="signIn_create_profile">Create Profile</string>
     <string name="signIn_no_account">I don\'t have a <b>Google Account</b> </string>
