--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,9 @@
 
     <!--    StoryChooser Layout-->
     <string name="story_chooser_add_story_description">Button to create a new Story</string>
+
+    <!-- Empty ListView-->
+    <string name="empty_all_story">Sorry there\'s no story</string>
+    <string name="empty_my_story">Sorry none of your story are completed</string>
+    <string name="empty_fav_story">Sorry you don\'t have any favorite story</string>
 </resources>
