--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="settings_debug_version">-- DEBUG VERSION --</string>
 
     <!-- Settings Class -->
-    <string name="setting_log_out">Logging out</string>
+    <string name="setting_log_out">Logout</string>
     <string name="setting_added_token">Token added!</string>
     <string name="setting_are_you_sure">Are you sure?</string>
     <string name="setting_dbh_cleared">DBHandler cleared</string>
@@ -88,6 +88,7 @@
     <string name="main_press_back_again_exit">Press back button again to exit the App.</string>
 
     <!--    Item StoryList  -->
+    <string name="completed_stories_list_item_author_label">Author: </string>
     <string name="item_storylist_new">( NEW )</string>
 
     <!--    StoryChooser Layout-->
