There's now a text if the storychoose list is empty

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,5 @@
     <string name="empty_all_story">Sorry there\'s no story</string>
     <string name="empty_my_story">Sorry none of your story are completed</string>
     <string name="empty_fav_story">Sorry you don\'t have any favorite story</string>
+    <string name="empty_chooser_story">Sorry there\'s not story to edit.\n Maybe you could Create a new one</string>
 </resources>
